foundation-objs/main/default/objects/Business_Questionnaire__c/Business_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Business Questionnaire</label>
    <nameField>
        <label>Name of the company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>