foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Questionnaire</relationshipLabel>
    <relationshipName>Business_Questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>