foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Creation_of_customised_onboarding_plan__c.field-meta.xml
<CustomField>
    <fullName>Creation_of_customised_onboarding_plan__c</fullName>
    <label>Creation of customised onboarding plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>