foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Do_you_use_external_consultant_for_filin__c.field-meta.xml
<CustomField>
    <fullName>Do_you_use_external_consultant_for_filin__c</fullName>
    <label>Do you use external consultant for filin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>