foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Have_we_created_a_Whatsapp_group__c.field-meta.xml
<CustomField>
    <fullName>Have_we_created_a_Whatsapp_group__c</fullName>
    <label>Have we created a Whatsapp group?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>