foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Have_you_used_CT_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_used_CT_before__c</fullName>
    <label>Have you used CT before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>