foundation-objs/main/default/objects/Business_Questionnaire__c/fields/How_do_you_do_filling_right_now__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_do_filling_right_now__c</fullName>
    <label>How do you do filling right now?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government portal</fullName>
            </value>
            <value>
                <fullName>Competitor product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>