foundation-objs/main/default/objects/Business_Questionnaire__c/fields/How_do_you_do_your_ITC_calculation__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_do_your_ITC_calculation__c</fullName>
    <label>How do you do your ITC calculation?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>