foundation-objs/main/default/objects/Business_Questionnaire__c/fields/How_is_filing_done__c.field-meta.xml
<CustomField>
    <fullName>How_is_filing_done__c</fullName>
    <inlineHelpText>Does the filing belong happen through the head quarters or individually through branches?</inlineHelpText>
    <label>How is filing done?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decentralized</fullName>
            </value>
            <value>
                <fullName>Centralized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>