foundation-objs/main/default/objects/Business_Questionnaire__c/fields/How_many_GSTINs_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>How_many_GSTINs_do_you_use__c</fullName>
    <label>How many GSTINs do you use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>&gt;10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>