foundation-objs/main/default/objects/Business_Questionnaire__c/fields/How_many_IRN_do_you_generate_each_month__c.field-meta.xml
<CustomField>
    <fullName>How_many_IRN_do_you_generate_each_month__c</fullName>
    <label>How many IRN do you generate each month?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>100 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 1000</fullName>
            </value>
            <value>
                <fullName>1K - 5K</fullName>
            </value>
            <value>
                <fullName>5K - 10K</fullName>
            </value>
            <value>
                <fullName>10K - 25K</fullName>
            </value>
            <value>
                <fullName>25K - 50K</fullName>
            </value>
            <value>
                <fullName>50K - 1L</fullName>
            </value>
            <value>
                <fullName>&gt; 1L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>