foundation-objs/main/default/objects/Business_Questionnaire__c/fields/If_yes_then_what_is_the_CT_user_ID__c.field-meta.xml
<CustomField>
    <fullName>If_yes_then_what_is_the_CT_user_ID__c</fullName>
    <label>If yes then what is the CT user ID?</label>
    <type>TextArea</type>
</CustomField>