foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Language_preference_for_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Language_preference_for_onboarding__c</fullName>
    <label>Language preference for onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>