foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Name_of_the_company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_company__c</fullName>
    <description>Please enter the name of the company the asset pertains to</description>
    <label>Name of the company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>