foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Number_of_export_invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_export_invoices__c</fullName>
    <label>Number of export invoices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50 -100</fullName>
            </value>
            <value>
                <fullName>&gt; 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>