foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Number_of_Purchase_invoice_per_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Purchase_invoice_per_month__c</fullName>
    <label>Number of Purchase invoice per month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 10</fullName>
            </value>
            <value>
                <fullName>10 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 1000</fullName>
            </value>
            <value>
                <fullName>1K - 5K</fullName>
            </value>
            <value>
                <fullName>5K - 10K</fullName>
            </value>
            <value>
                <fullName>10K - 50K</fullName>
            </value>
            <value>
                <fullName>50K - 1L</fullName>
            </value>
            <value>
                <fullName>&gt; 1L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>