foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Number_of_Vendors_per_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vendors_per_month__c</fullName>
    <label>Number of Vendors per month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;10</fullName>
            </value>
            <value>
                <fullName>10 - 25</fullName>
            </value>
            <value>
                <fullName>25 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>