foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Size_of_your_team_to_be_trained__c.field-meta.xml
<CustomField>
    <fullName>Size_of_your_team_to_be_trained__c</fullName>
    <label>Size of your team to be trained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2 - 3</fullName>
            </value>
            <value>
                <fullName>3 - 5</fullName>
            </value>
            <value>
                <fullName>5 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 20</fullName>
            </value>
            <value>
                <fullName>&gt; 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>