foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Tax_Head_or_reviewer_details__c.field-meta.xml
<CustomField>
    <fullName>Tax_Head_or_reviewer_details__c</fullName>
    <description>Name
Email ID
Phone number</description>
    <label>Tax Head or reviewer details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>