foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Turnover_of_the_company__c.field-meta.xml
<CustomField>
    <fullName>Turnover_of_the_company__c</fullName>
    <label>Turnover of the company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50 Cr</fullName>
            </value>
            <value>
                <fullName>50 - 100 Cr</fullName>
            </value>
            <value>
                <fullName>100 - 250 Cr</fullName>
            </value>
            <value>
                <fullName>250 - 500 Cr</fullName>
            </value>
            <value>
                <fullName>500 - 1000 Cr</fullName>
            </value>
            <value>
                <fullName>&gt; 1000 Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>