foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Type_of_documents_in_Purchase_Regsiter__c.field-meta.xml
<CustomField>
    <fullName>Type_of_documents_in_Purchase_Regsiter__c</fullName>
    <label>Type of documents in Purchase Regsiter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Imports</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>