foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Types_of_documents_in_Sales_Register__c.field-meta.xml
<CustomField>
    <fullName>Types_of_documents_in_Sales_Register__c</fullName>
    <label>Types of documents in Sales Register</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Exports</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>