foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_accounting_software_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>What_accounting_software_do_you_use__c</fullName>
    <label>What accounting software do you use?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>