foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_challenges_are_you_facing_now__c.field-meta.xml
<CustomField>
    <fullName>What_challenges_are_you_facing_now__c</fullName>
    <label>What challenges are you facing now?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>