foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_ClearGST_features_interest_you__c.field-meta.xml
<CustomField>
    <fullName>What_ClearGST_features_interest_you__c</fullName>
    <label>What ClearGST features interest you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>