foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_data_templates_you_use_for_filing__c.field-meta.xml
<CustomField>
    <fullName>What_data_templates_you_use_for_filing__c</fullName>
    <label>What data templates you use for filing?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
            <value>
                <fullName>ERP template</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>