foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_difficulties_you_face_in_filing__c.field-meta.xml
<CustomField>
    <fullName>What_difficulties_you_face_in_filing__c</fullName>
    <label>What difficulties you face in filing?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>