foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_ERP_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>What_ERP_do_you_use__c</fullName>
    <label>What ERP do you use?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>