foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_GST_filing_do_you_do_or_plan_to_do__c.field-meta.xml
<CustomField>
    <fullName>What_GST_filing_do_you_do_or_plan_to_do__c</fullName>
    <label>What GST filing do you do or plan to do?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSTR 1</fullName>
            </value>
            <value>
                <fullName>GSTR 3B</fullName>
            </value>
            <value>
                <fullName>GSTR 9</fullName>
            </value>
            <value>
                <fullName>GSTR 9C</fullName>
            </value>
            <value>
                <fullName>ITC 04</fullName>
            </value>
            <value>
                <fullName>GSTR 6</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>