foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_is_domain_competency_within_client__c.field-meta.xml
<CustomField>
    <fullName>What_is_domain_competency_within_client__c</fullName>
    <label>What is domain competency within client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Most are qualified CAs</fullName>
            </value>
            <value>
                <fullName>Team lead by 1 - 2 CAs assisted by CA articles/ graduates</fullName>
            </value>
            <value>
                <fullName>Graduates with several years of experience in the same domain</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>