foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_is_recon_frequency__c.field-meta.xml
<CustomField>
    <fullName>What_is_recon_frequency__c</fullName>
    <label>What is your recon frequency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>