foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_kind_of_invoices_do_you_deal_with__c.field-meta.xml
<CustomField>
    <fullName>What_kind_of_invoices_do_you_deal_with__c</fullName>
    <label>What kind of invoices do you deal with?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>