foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_made_client_switch_to_Cleartax__c.field-meta.xml
<CustomField>
    <fullName>What_made_client_switch_to_Cleartax__c</fullName>
    <label>What made client switch to Cleartax?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>