foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_reports_would_you_want_to_use__c.field-meta.xml
<CustomField>
    <fullName>What_reports_would_you_want_to_use__c</fullName>
    <label>What reports would you want to use?</label>
    <type>TextArea</type>
</CustomField>