foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_systems_do_you_use_for_E_Inv_EWB__c.field-meta.xml
<CustomField>
    <fullName>What_systems_do_you_use_for_E_Inv_EWB__c</fullName>
    <label>What systems do you use for E-Inv, EWB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>