foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_type_of_consultant_are_you_using__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_consultant_are_you_using__c</fullName>
    <label>What type of consultant are you using</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big 4</fullName>
            </value>
            <value>
                <fullName>Local CA firm</fullName>
            </value>
            <value>
                <fullName>Independent consultant</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>