foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_type_of_EWB_do_you_generate__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_EWB_do_you_generate__c</fullName>
    <label>What type of EWB do you generate?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>