foundation-objs/main/default/objects/Business_Questionnaire__c/fields/What_type_of_recon_do_you_do_or_need__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_recon_do_you_do_or_need__c</fullName>
    <label>What type of recon do you do or need?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2A vs PR</fullName>
            </value>
            <value>
                <fullName>2B vs PR</fullName>
            </value>
            <value>
                <fullName>EWB vs G1</fullName>
            </value>
            <value>
                <fullName>G1 vs Sales Register</fullName>
            </value>
            <value>
                <fullName>8A vs PR</fullName>
            </value>
            <value>
                <fullName>PAN - 2A vs PR</fullName>
            </value>
            <value>
                <fullName>PAN - 2B vs PR</fullName>
            </value>
            <value>
                <fullName>PAN - EWB vs G1</fullName>
            </value>
            <value>
                <fullName>PAN - G1 vs Sales Register</fullName>
            </value>
            <value>
                <fullName>PAN - 8A vs PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>