foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Who_helps_you_in_IT_troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Who_helps_you_in_IT_troubleshooting__c</fullName>
    <label>Who helps you in IT troubleshooting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse IT Team</fullName>
            </value>
            <value>
                <fullName>External Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>