foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Who_is_responsible_for_filing__c.field-meta.xml
<CustomField>
    <fullName>Who_is_responsible_for_filing__c</fullName>
    <label>Who is responsible for filing?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>