foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Who_prepares_data_for_ingestion__c.field-meta.xml
<CustomField>
    <fullName>Who_prepares_data_for_ingestion__c</fullName>
    <label>Who prepares data for ingestion?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>