foundation-objs/main/default/objects/Business_Questionnaire__c/fields/Who_will_be_doing_E_Inv_EWB_generation__c.field-meta.xml
<CustomField>
    <fullName>Who_will_be_doing_E_Inv_EWB_generation__c</fullName>
    <label>Who will be doing E-Inv &amp; EWB generation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>